fix: search icon on dark mode

--- a/_includes/styles/elements.scss
+++ b/_includes/styles/elements.scss
@@ -112,6 +112,7 @@ li code, p code {
   svg {
     width: 18px;
     opacity: 0.5;
+    fill: var(--text);
   }
 
   &--text {
